# imap-easybox

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
docs/source/: api.rst  conf.py  imap_easybox.rst  index.rst  modules.rst  tutorial.rst  usage.rst
imap_easybox/: __init__.py  email.py  folder.py  server.py  utils.py
imapbox/: __init__.py  email.py  folder.py  imap.py  server.py  utils.py
imapbox/tests/: conftest.py  test_server.py
imapbox/tests/test_126_box/: conftest.py  test_126.py  test_126_server.py
imapbox/tests/test_fake_box/: conftest.py  test_fake_server.py
tests/test_126_box/: conftest.py  test_126_box.py
tests/test_fake_box/: conftest.py
